[gd_scene load_steps=11 format=3 uid="uid://cml5ec7a2unp0"]

[ext_resource type="Script" uid="uid://cwcnxwg0vywo5" path="res://scripts/main.gd" id="1_i81mx"]
[ext_resource type="Texture2D" uid="uid://bqrcmjloegdv" path="res://icon.svg" id="2_4j5ol"]
[ext_resource type="PackedScene" uid="uid://x1jn6h6qt1uk" path="res://scene/Mechanics/Light.tscn" id="2_hu6xg"]
[ext_resource type="PackedScene" uid="uid://wnvlnsgd0l1o" path="res://scene/Mechanics/door.tscn" id="2_ygy10"]
[ext_resource type="PackedScene" uid="uid://cfmlskvrau13d" path="res://scene/Mechanics/lamp.tscn" id="4_6326s"]
[ext_resource type="PackedScene" uid="uid://dslhvgulwx6x7" path="res://scene/Mechanics/Character.tscn" id="5_0ha60"]
[ext_resource type="Script" uid="uid://dv4dbs07owvmq" path="res://scripts/lamp_platform.gd" id="6_b5f6u"]
[ext_resource type="PackedScene" uid="uid://ccrmueqv6w37v" path="res://scene/Mechanics/MovingPlatform.tscn" id="7_of57s"]
[ext_resource type="PackedScene" uid="uid://boxbbtvot2ufo" path="res://scene/Mechanics/MovingPlatformWithCue.tscn" id="7_p1hux"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ie3gd"]

[node name="Main" type="Node2D"]
script = ExtResource("1_i81mx")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(576.5, 321.5)
scale = Vector2(9.0546875, 5.0546875)
texture = ExtResource("2_4j5ol")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Icon"]
blend_mode = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(475, 551)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_ie3gd")

[node name="Door" parent="." instance=ExtResource("2_ygy10")]
position = Vector2(782.00006, 492)
scale = Vector2(2.5, 2.5)

[node name="Light" parent="." instance=ExtResource("2_hu6xg")]
position = Vector2(312, 491)

[node name="Platform_Trigger" parent="." instance=ExtResource("4_6326s")]
position = Vector2(628, 468)
scale = Vector2(2, 2)
script = ExtResource("6_b5f6u")

[node name="Path2D" parent="Platform_Trigger" instance=ExtResource("7_p1hux")]
position = Vector2(6, -43)

[node name="Path2D2" parent="Platform_Trigger" instance=ExtResource("7_of57s")]
position = Vector2(-40, -149.5)

[node name="Door_linked_lamp" parent="." instance=ExtResource("4_6326s")]
position = Vector2(168, 485)
scale = Vector2(2, 2)

[node name="ShadyX" parent="." instance=ExtResource("5_0ha60")]
position = Vector2(460, 414)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
blend_mode = 1
